<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.laboratorio5apps.ui.home.HomeFragment"
        android:label="@string/menu_home">
        <action
            android:id="@+id/action_nav_home_to_nav_add_question"
            app:destination="@id/nav_add_question" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_question"
        android:name="com.example.laboratorio5apps.ui.addQuestion.AddQuestionFragment"
        android:label="@string/menu_addQuestion"
        tools:layout="@layout/fragment_add_question" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.laboratorio5apps.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.laboratorio5apps.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.laboratorio5apps.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.laboratorio5apps.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>