<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_all_questions"
            android:icon="@drawable/img_list"
            android:title="@string/all_questions" />
        <item
            android:id="@+id/nav_answereds"
            android:icon="@drawable/ic_playlist_add_check_white_24dp"
            android:title="@string/answereds" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/About" />
        </menu>
    </item>

</menu>
